add_executable(
    ${PROJECT_NAME}Tests
    
    main.cpp
    Test_twosum.cpp
)

target_include_directories(
    ${PROJECT_NAME}Tests

    PRIVATE
        ./
)

target_compile_features(
    ${PROJECT_NAME}Tests

    PRIVATE
        cxx_std_20   
)

target_link_libraries(
    ${PROJECT_NAME}Tests
    PRIVATE
    ${PROJECT_NAME}lib

)